protocols/tests/adders/adder_d1/fork_before_step_error.out
error: Thread 0 (transaction 'add_fork_before_step') called `fork()` before calling `step()`
   ┌─ adders/adder_d1/fork_before_step_error.prot:11:3
   │
11 │   fork();
   │   ^^^^^^^ Thread 0 (transaction 'add_fork_before_step') called `fork()` before calling `step()`

Trace 0 failed: Thread(ForkBeforeStep { thread_idx: 0, transaction_name: "add_fork_before_step", stmt_id: stmt3 })
Trace 0 execution failed.
